# financial-control

./: README.md  pyproject.toml  requirements.txt
accounts/: admin.py  context_processors.py  filters.py  forms.py  models.py  urls.py  views.py
accounts/management/commands/: import_csv.py
accounts/migrations/: 0001_initial.py  0002_alter_entity_options_alter_paymentmethod_options_and_more.py
accounts/templates/accounts/: bankaccount_form.html  bankaccount_list.html  bankaccount_table.html  paymentmethod_form.html  paymentmethod_list.html  paymentmethod_table.html
accounts/templates/registration/: login.html
core/: admin.py  filters.py  forms.py  middleware.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_default_categories.py
financial/: admin.py  apps.py  filters.py  forms.py  models.py  services.py  urls.py  views.py  widgets.py
financial/migrations/: 0001_initial.py  0002_alter_category_options_alter_financialrecord_options_and_more.py  0003_alter_financialrecord_entity_and_more.py
financial/templatetags/: financial_extras.py
financial_control/: asgi.py  settings.py  urls.py  wsgi.py
media/: db2.sqlite3
telegram_bot/: admin.py  ai_service.py  apps.py  handlers.py  keyboards.py  matching.py  models.py  transaction_service.py  urls.py  views.py
telegram_bot/migrations/: 0001_initial.py
templates/: 403.html  404.html  base.html  dashboard.html
templates/registration/: base.html
templates/snippets/: filtersOffcanvas.html  pagination.html
utils/: htmx_views.py  page_for_object.py  widgets.py
(+43 files in other folders)
